--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.9",
     "react": "^19.1.0",
@@ -18,10 +19,8 @@
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "react-tsparticles": "^2.12.0",
-    "tsparticles": "^2.12.0",
-    "resend": "^4.7.0"
-    
-
+    "resend": "^4.7.0",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
