--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@loadable/component": "^5.16.7",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.9",
+    "framer-motion-3d": "^12.4.13",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "react-tsparticles": "^2.12.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^2.1.2",
+    "react-window-infinite-loader": "^2.0.0",
     "resend": "^4.7.0",
     "tsparticles": "^2.12.0"
   },
